--- a/teamcity-rest-client-api/teamcity-rest-client-api.csproj
+++ b/teamcity-rest-client-api/teamcity-rest-client-api.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>teamcity_rest_client_api</RootNamespace>
+    <RootNamespace>TeamCityRestClientNet</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
