--- a/teamcity-rest-client-implementation/teamcity-rest-client-implementation.csproj
+++ b/teamcity-rest-client-implementation/teamcity-rest-client-implementation.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="TimeUnit" Version="1.0.2" />
   </ItemGroup>
 
