--- a/teamcity-rest-client-api/teamcity-rest-client-api.csproj
+++ b/teamcity-rest-client-api/teamcity-rest-client-api.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>TeamCityRestClientNet</RootNamespace>
+    <TargetFramework>netstandard2.1</TargetFramework>
+    <RootNamespace>TeamCityRestClientNet.Api</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
