Intermediate commit - eager async creation.

--- a/teamcity-rest-client-api/teamcity-rest-client-api.csproj
+++ b/teamcity-rest-client-api/teamcity-rest-client-api.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Nito.AsyncEx" Version="5.1.0" />
     <PackageReference Include="TimeUnit" Version="1.0.2" />
   </ItemGroup>
 
