--- a/teamcity-rest-client-implementation/teamcity-rest-client-implementation.csproj
+++ b/teamcity-rest-client-implementation/teamcity-rest-client-implementation.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Nito.AsyncEx" Version="5.1.0" />
     <PackageReference Include="System.Linq.Async" Version="5.0.0" />
     <PackageReference Include="TimeUnit" Version="1.0.2" />
   </ItemGroup>
