Rename project files and folders.

--- a/TeamCityRestClientNet.Implementation/TeamCityRestClientNet.Implementation.csproj
+++ b/TeamCityRestClientNet.Implementation/TeamCityRestClientNet.Implementation.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\teamcity-rest-client-api\teamcity-rest-client-api.csproj" />
+    <ProjectReference Include="..\TeamCityRestClientNet.Api\TeamCityRestClientNet.Api.csproj" />
   </ItemGroup>
 
 </Project>
