--- a/TeamCityRestClientNet.Implementation/TeamCityRestClientNet.Implementation.csproj
+++ b/TeamCityRestClientNet.Implementation/TeamCityRestClientNet.Implementation.csproj
@@ -3,8 +3,22 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <RootNamespace>TeamcityRestClientNet</RootNamespace>
+    <PackageId>TeamCityRestClient.NET</PackageId>
+    <Title>TeamCity REST client for .NET</Title>
+    <Product>TeamCity REST client for .NET</Product>
+    <Description>TeamCity REST client for .NET</Description>
+    <Version>1.0.0</Version>
+    <FileVersion>1.0.0</FileVersion>
+    <Authors>Aleksi Moisio</Authors>
+    <Company>-</Company>
+    <Copyright>Copyright (c) 2020 Aleksi Moisio</Copyright> 
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageTags>TeamCity;.NET;REST</PackageTags>
+    <PackageIcon></PackageIcon>
+    <RepositoryUrl>https://bitbucket.org/amoisio/teamcityrestclientnet/</RepositoryUrl>
+    <RepositoryBranch>master</RepositoryBranch>
+    <IncludeBuildOutput>true</IncludeBuildOutput>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Nito.AsyncEx" Version="5.1.0" />
@@ -12,7 +26,6 @@
     <PackageReference Include="System.Linq.Async" Version="5.0.0" />
     <PackageReference Include="TimeUnit" Version="1.0.2" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\TeamCityRestClientNet.Api\TeamCityRestClientNet.Api.csproj" />
   </ItemGroup>
