--- a/TeamCityRestClientNet.Implementation/TeamCityRestClientNet.Implementation.csproj
+++ b/TeamCityRestClientNet.Implementation/TeamCityRestClientNet.Implementation.csproj
@@ -20,13 +20,14 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     <PackageReference Include="Nito.AsyncEx" Version="5.1.0" />
     <PackageReference Include="refit" Version="5.2.4" />
     <PackageReference Include="System.Linq.Async" Version="5.0.0" />
     <PackageReference Include="TimeUnit" Version="1.0.2" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TeamCityRestClientNet.Api\TeamCityRestClientNet.Api.csproj"/>
+    <ProjectReference Include="..\TeamCityRestClientNet.Api\TeamCityRestClientNet.Api.csproj" />
   </ItemGroup>
 
 </Project>
