Move Rest Api entities to their own project.

--- a/TeamCityRestClientNet.Implementation/TeamCityRestClientNet.Implementation.csproj
+++ b/TeamCityRestClientNet.Implementation/TeamCityRestClientNet.Implementation.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TeamCityRestClientNet.Api\TeamCityRestClientNet.Api.csproj" />
+    <ProjectReference Include="..\TeamCityRestClientNet.RestApi\TeamCityRestClientNet.RestApi.csproj" />
   </ItemGroup>
 
 </Project>
