--- a/TeamCityRestClientNet.Tests/TeamCityRestClientNet.Tests.csproj
+++ b/TeamCityRestClientNet.Tests/TeamCityRestClientNet.Tests.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TeamCityRestClientNet.Api\TeamCityRestClientNet.Api.csproj" />
+    <ProjectReference Include="..\TeamCityRestClientNet.RestApi\TeamCityRestClientNet.RestApi.csproj" />
     <ProjectReference Include="..\TeamCityRestClientNet.Implementation\TeamCityRestClientNet.Implementation.csproj" />
   </ItemGroup>
 
