Implement first user query unit tests agains an "in-memory team city".

--- a/TeamCityRestClientNet.FakeServer/TeamCityRestClientNet.FakeServer.csproj
+++ b/TeamCityRestClientNet.FakeServer/TeamCityRestClientNet.FakeServer.csproj
@@ -4,5 +4,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\TeamCityRestClientNet.Api\TeamCityRestClientNet.Api.csproj" />
+    <ProjectReference Include="..\TeamCityRestClientNet.RestApi\TeamCityRestClientNet.RestApi.csproj" />
+  </ItemGroup>
 </Project>
