--- a/TeamCityRestClientNet.RestApi/TeamCityRestClientNet.RestApi.csproj
+++ b/TeamCityRestClientNet.RestApi/TeamCityRestClientNet.RestApi.csproj
@@ -2,6 +2,18 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <RootNamespace>TeamcityRestClientNet.RestApi</RootNamespace>
+    <PackageId>TeamCityRestClient.NET.RestApi</PackageId>
+    <Title>TeamCity REST client for .NET RestApi</Title>
+    <Product>TeamCity REST client for .NET RestApi</Product>
+    <Description>TeamCity REST client for .NET RestApi</Description>
+    <Version>1.0.1</Version>
+    <FileVersion>1.0.1</FileVersion>
+    <Authors>Aleksi Moisio</Authors>
+    <Company>-</Company>
+    <Copyright>Copyright (c) 2020 Aleksi Moisio</Copyright> 
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageTags>TeamCity;.NET;REST</PackageTags>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
